# localdeck

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  design.md  docker-compose.yml
.github/workflows/: docker-publish.yml
.opencode/: opencode.json
.opencode/skills/localdeck-discovery/: SKILL.md
.opencode/skills/localdeck-product/: SKILL.md
.opencode/skills/localdeck-security/: SKILL.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  registry.py
backend/app/api/: favicon.py  health.py  services.py
backend/app/scanner/: classify.py  docker.py  html.py  listening.py  ports.py  probe.py  scan.py
backend/tests/: test_api_services.py  test_classify.py  test_config.py  test_docker.py  test_favicon_api.py  test_frontend_static.py  test_html.py  test_listening.py  test_ports.py  test_probe.py  test_scan.py
docs/: architecture.md  detection-strategy.md  product-boundaries.md  roadmap.md  security-model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: services.ts
frontend/src/components/: EmptyState.tsx  LoadingState.tsx  ServiceCard.tsx  ServiceGrid.tsx
frontend/src/types/: service.ts
scripts/: package-lock.json  package.json  record-demo.js
